Fix - top align hero background

--- a/inc/scss/_module.scss
+++ b/inc/scss/_module.scss
@@ -2,6 +2,7 @@
 
 .wrapper-hero {
     @include backgroundCover;
+    background-position: top center !important;
     position: relative;
     display: grid;
     justify-content: center;
